Fix: Improve visual alignment and text styling in todo list items
Refine the visual appearance of todo list items by centering the label content and adjusting the text line-height for checked items to enhance readability and consistency.

--- a/level-1/challenge-todo-list/src/components/List/Item/ListItem.module.css
+++ b/level-1/challenge-todo-list/src/components/List/Item/ListItem.module.css
@@ -14,6 +14,9 @@
 .container label {
   display: flex;
   gap: 1rem;
+
+  justify-content: center;
+  align-items: center;
 }
 
 .container button {
@@ -64,7 +67,7 @@
 }
 
 .checkbox.checked p {
-  line-height: 100%;
+  line-height: 140%;
   text-decoration: line-through;
   color: var(--gray-300);
 }
